--- a/styles/bio.css
+++ b/styles/bio.css
@@ -16,155 +16,6 @@
   font-weight: 400;
   font-style: normal;
 }
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "AvenirNext LT Pro";
-  margin: 0;
-}
-
-header {
-  background-color: #323232;
-  background-size: cover;
-  /*border-bottom: 0.0625rem stroke $color-mercury;*/
-}
-
-.navbar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  color: #FFFFFF;
-  padding-bottom: 0.4rem;
-}
-@media (min-width: 768px) {
-  .navbar {
-    flex-direction: row;
-    justify-content: left;
-    align-items: center;
-    margin: 0rem 1rem 0rem 2rem;
-    padding-bottom: 1.2rem;
-  }
-}
-@media (min-width: 1200px) {
-  .navbar {
-    flex-direction: row;
-    justify-content: left;
-    align-items: center;
-    margin: 0rem 1rem 0rem 6rem;
-  }
-}
-.navbar__title-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 2rem 0rem 2rem 0rem;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 700;
-  max-height: 1.25rem;
-  max-width: 7.5rem;
-}
-@media (min-width: 768px) {
-  .navbar__title-container {
-    font-size: 3.75rem;
-    line-height: 4.25rem;
-    flex-direction: row;
-    width: 20%;
-    margin-right: 0.5rem;
-    padding-bottom: 1rem;
-  }
-}
-@media (min-width: 1200px) {
-  .navbar__title-container {
-    font-size: 3.75rem;
-    line-height: 4.25rem;
-    flex-direction: row;
-    width: 20%;
-    margin-right: -10rem;
-  }
-}
-.navbar__list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
-  width: 100%;
-  font-size: 0.75rem;
-  font-weight: 600;
-  max-height: 1.375rem;
-}
-@media (min-width: 768px) {
-  .navbar__list {
-    font-size: 1rem;
-    max-height: 2rem;
-    flex-direction: row;
-    width: 80%;
-    padding-top: 3rem;
-    margin-left: -8rem;
-  }
-}
-@media (min-width: 1200px) {
-  .navbar__list {
-    font-size: 0.75rem;
-    max-height: 2rem;
-    flex-direction: row;
-    width: 80%;
-  }
-}
-.navbar__item {
-  width: 50%;
-  text-align: center;
-}
-.navbar__second-item {
-  width: 50%;
-  text-align: center;
-}
-@media (min-width: 768px) {
-  .navbar__second-item {
-    margin-left: -11rem;
-  }
-}
-@media (min-width: 1200px) {
-  .navbar__second-item {
-    margin-left: -22rem;
-    padding-bottom: 0.5rem;
-  }
-}
-.navbar__link {
-  display: inline-block;
-  color: #AFAFAF;
-  text-decoration: none;
-  width: 100%;
-  padding-bottom: 1rem;
-}
-.navbar__link--active, .navbar__link:hover {
-  border-bottom: 4px solid #FFFFFF;
-  color: #FFFFFF;
-  margin: 0rem;
-  width: 100%;
-}
-@media (min-width: 768px) {
-  .navbar__link--active, .navbar__link:hover {
-    padding-bottom: 1rem;
-    width: 28%;
-  }
-}
-@media (min-width: 1200px) {
-  .navbar__link--active, .navbar__link:hover {
-    border-bottom: 2px solid #FFFFFF;
-    padding-bottom: 1.4rem;
-    width: 15%;
-  }
-}
-.navbar__link:hover {
-  color: #000000;
-  transition: 0.4s;
-}
-
 .hero-section {
   display: flex;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/hero-bio.jpg);
@@ -321,8 +172,7 @@ header {
 .paragraph-section {
   display: flex;
   flex-direction: column;
-  margin: 0rem 0rem;
-  /*justify-content: center;*/
+  margin: 0rem;
   align-items: center;
 }
 @media (min-width: 768px) {
@@ -443,227 +293,128 @@ header {
   width: 100%;
 }
 
-footer {
+.comment-section {
+  color: #323232;
+}
+.comment-section__title {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+  padding-top: 1rem;
+}
+
+.form-section {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.form-section__user-pic {
+  display: flex;
+  align-items: flex-start;
+  justify-content: left;
+  width: 20%;
+  padding-top: 1rem;
+}
+.form-section__user-pic__image {
+  border-radius: 50%;
+  width: 3.5rem;
+  height: 3.5rem;
+}
+.form-section__form-container {
+  display: flex;
+  justify-content: right;
+  width: 80%;
+  margin-left: 1rem;
+}
+
+label {
+  color: #AFAFAF;
+  font-size: 0.9rem;
+  font-weight: 600;
+  margin: 0.25rem 0rem;
+}
+
+input {
+  background-color: #FAFAFA;
+  height: 3rem;
+  width: 100%;
+  border: 1px solid #E1E1E1;
+  border-radius: 0.25rem;
+  margin-bottom: 1.5rem;
+}
+
+input::-moz-placeholder {
+  color: #323232;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.75rem;
+  font-weight: 400;
+  font-family: "AvenirNext LT Pro";
+}
+
+input:-ms-input-placeholder {
+  color: #323232;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.75rem;
+  font-weight: 400;
+  font-family: "AvenirNext LT Pro";
+}
+
+input::placeholder {
+  color: #323232;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.75rem;
+  font-weight: 400;
+  font-family: "AvenirNext LT Pro";
+}
+
+textarea {
+  background-color: #FAFAFA;
+  height: 6rem;
+  width: 100%;
+  border: 1px solid #E1E1E1;
+  border-radius: 0.25rem;
+  margin: 0.5rem 0rem 1rem 0rem;
+}
+
+textarea::-moz-placeholder {
+  color: #323232;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.75rem;
+  font-weight: 400;
+  font-family: "AvenirNext LT Pro";
+}
+
+textarea:-ms-input-placeholder {
+  color: #323232;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.75rem;
+  font-weight: 400;
+  font-family: "AvenirNext LT Pro";
+}
+
+textarea::placeholder {
+  color: #323232;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.75rem;
+  font-weight: 400;
+  font-family: "AvenirNext LT Pro";
+}
+
+button {
   background-color: #323232;
-  padding: 1rem;
-  margin-top: 1rem;
   color: #FFFFFF;
-  position: relative;
-}
-@media (min-width: 768px) {
-  footer {
-    margin-top: 3rem;
-  }
-}
-@media (min-width: 1200px) {
-  footer {
-    margin-top: 2rem;
-  }
+  border-radius: 0.25rem;
+  height: 2.5rem;
+  width: 100%;
 }
 
-.social-section {
-  display: flex;
-}
-.social-section__title {
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 600;
-}
-@media (min-width: 768px) {
-  .social-section__title {
-    flex-direction: row;
-    font-size: 2.25rem;
-    line-height: 2.75rem;
-    padding-top: 2rem;
-    margin: 0rem 2rem;
-  }
-}
-@media (min-width: 1200px) {
-  .social-section__title {
-    flex-direction: row;
-    font-size: 2.25rem;
-    line-height: 2.75rem;
-    margin: 0rem 5rem;
-  }
-}
-
-.social-links {
-  display: flex;
-  padding: 0rem;
-  margin-left: -1rem;
-  justify-content: left;
-  align-items: center;
-  flex-direction: row;
-}
-@media (min-width: 768px) {
-  .social-links {
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: -3rem;
-    margin-left: -5rem;
-  }
-}
-@media (min-width: 1200px) {
-  .social-links {
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: -3rem;
-    margin-left: -25rem;
-  }
-}
-.social-links__image {
-  flex-direction: row;
-  padding: 1rem;
-  flex-grow: 2;
-}
-
-.bandsite-agents-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 0rem;
-}
-@media (min-width: 768px) {
-  .bandsite-agents-info {
-    flex-direction: row;
-    padding: 1rem;
-  }
-}
-@media (min-width: 1200px) {
-  .bandsite-agents-info {
-    flex-direction: row;
-    padding: 4rem;
-  }
-}
-.bandsite-agents-info__name {
-  font-size: 0.875rem;
-  line-height: 1.375rem;
-  font-weight: 600;
-  flex-direction: row;
-  margin: 1rem 1rem -1rem 0rem;
-}
-@media (min-width: 768px) {
-  .bandsite-agents-info {
-    flex-direction: row;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    padding-top: 0rem;
-    margin: 0rem 1rem;
-  }
-}
-@media (min-width: 1200px) {
-  .bandsite-agents-info {
-    flex-direction: row;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    padding-top: 0rem;
-    margin: 0rem 1rem;
-  }
-}
-.bandsite-agents-info__title {
-  flex-direction: row;
-  font-size: 0.875rem;
-  line-height: 1.375rem;
-  font-weight: 600;
-}
-@media (min-width: 768px) {
-  .bandsite-agents-info {
-    flex-direction: row;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    padding-top: 0rem;
-    margin: 0rem 1rem;
-  }
-}
-@media (min-width: 1200px) {
-  .bandsite-agents-info {
-    flex-direction: row;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    padding-top: 0rem;
-    margin: 0rem 1rem;
-  }
-}
-.bandsite-agents-info__address {
-  flex-direction: row;
-  font-size: 0.875rem;
-  line-height: 1.375rem;
-  font-weight: 400;
-}
-@media (min-width: 768px) {
-  .bandsite-agents-info {
-    flex-direction: row;
-  }
-}
-@media (min-width: 1200px) {
-  .bandsite-agents-info {
-    flex-direction: row;
-  }
-}
-.bandsite-agents-info__address__two {
-  margin-top: -1rem;
-}
-.bandsite-agents-info__email {
-  flex-direction: row;
-  font-size: 0.875rem;
-  line-height: 1.375rem;
-  font-weight: 400;
-}
-
-.bandsite-title {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  padding: 4rem 0rem 1rem 0rem;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 700;
-  max-height: 1.25rem;
-  max-width: 7.5rem;
-}
-@media (min-width: 768px) {
-  .bandsite-title {
-    font-size: 3.75rem;
-    line-height: 4.25rem;
-    flex-direction: row;
-    margin: -2rem 1rem 0rem 1rem;
-    padding-bottom: 1rem;
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-  }
-}
-@media (min-width: 1200px) {
-  .bandsite-title {
-    font-size: 3.75rem;
-    line-height: 4.25rem;
-    flex-direction: row;
-    right: 6rem;
-  }
-}
-
-.copyright-section {
-  font-size: 0.8125rem;
-  line-height: 1.125rem;
-  font-weight: 400;
-}
-@media (min-width: 768px) {
-  .copyright-section {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    margin: 1rem 2rem;
-  }
-}
-@media (min-width: 1200px) {
-  .copyright-section {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    padding-left: 3rem;
-    margin-top: -3rem;
-  }
+button:hover {
+  background-color: #000000;
+  color: #FFFFFF;
 }/*# sourceMappingURL=bio.css.map */
