--- a/styles/bio.css
+++ b/styles/bio.css
@@ -229,6 +229,7 @@
   background-color: #FAFAFA;
   background-size: cover;
   margin: -1rem;
+  padding-bottom: 2rem;
 }
 
 .photo-title {
@@ -302,12 +303,43 @@
   font-weight: 600;
   padding-top: 1rem;
 }
+@media (min-width: 768px) {
+  .comment-section {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+    padding-top: 2rem;
+    margin: 0rem 2rem 1rem 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .comment-section {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+    padding-top: 3rem;
+    margin: 1rem 1rem 1rem 5rem;
+  }
+}
 
 .form-section {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   width: 100%;
   margin-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  .form-section {
+    justify-content: left;
+    margin: 1rem 2rem;
+  }
+}
+@media (min-width: 1200px) {
+  .form-section {
+    justify-content: center;
+    margin: 1rem 10rem;
+  }
 }
 .form-section__user-pic {
   display: flex;
@@ -316,16 +348,46 @@
   width: 20%;
   padding-top: 1rem;
 }
+@media (min-width: 768px) {
+  .form-section__user-pic {
+    width: 10%;
+    padding-top: 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .form-section__user-pic {
+    padding-top: 1rem;
+    width: 10%;
+  }
+}
 .form-section__user-pic__image {
   border-radius: 50%;
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 2.25rem;
+  height: 2.25rem;
+}
+@media (min-width: 768px) {
+  .form-section__user-pic__image {
+    width: 3rem;
+    height: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  .form-section__user-pic__image {
+    width: 3rem;
+    height: 3rem;
+  }
 }
 .form-section__form-container {
   display: flex;
   justify-content: right;
   width: 80%;
   margin-left: 1rem;
+}
+@media (min-width: 768px) {
+  .form-section__form-container {
+    justify-content: left;
+    width: 90%;
+  }
 }
 
 label {
@@ -342,6 +404,12 @@ input {
   border: 1px solid #E1E1E1;
   border-radius: 0.25rem;
   margin-bottom: 1.5rem;
+}
+@media (min-width: 768px) {
+  input {
+    height: 3rem;
+    width: 100%;
+  }
 }
 
 input::-moz-placeholder {
@@ -422,52 +490,87 @@ button:hover {
 }
 
 .comment-entered-section {
-  position: relative;
+  display: flex;
   border-top: 1px solid #E1E1E1;
   flex-direction: column;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   width: 100%;
 }
-
-.user-profile-pic {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: left;
-  width: 20%;
-  padding-top: 1rem;
+@media (min-width: 768px) {
+  .comment-entered-section {
+    padding: 1rem 3rem;
+  }
 }
-.user-profile-pic__circle {
-  background-color: #E1E1E1;
-  border-radius: 50%;
-  width: 3.5rem;
-  height: 3.5rem;
+@media (min-width: 1200px) {
+  .comment-entered-section {
+    justify-content: center;
+    padding: 0rem 15rem;
+  }
 }
 
 .comment-card {
   display: flex;
   border-bottom: 1px solid #E1E1E1;
-  position: relative;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: right;
-  align-items: flex-start;
-  width: 80%;
-  margin: 1rem;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
 }
-
-.fullname {
+.comment-card__user-profile {
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: left;
+  width: 20%;
+  height: 100%;
+}
+.comment-card__user-profile__circle {
+  background-color: #E1E1E1;
+  border-radius: 50%;
+  width: 2.25rem;
+  height: 2.25rem;
+}
+@media (min-width: 768px) {
+  .comment-card__user-profile__circle {
+    width: 3rem;
+    height: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  .comment-card__user-profile__circle {
+    width: 3rem;
+    height: 3rem;
+  }
+}
+.comment-card__top-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 80%;
+  height: 20%;
+}
+.comment-card__top-container__fullname {
+  justify-content: left;
+  align-items: center;
   font-size: 1rem;
   font-weight: 600;
 }
-
-.dateEntered {
+.comment-card__top-container__dateEntered {
   color: #AFAFAF;
-  position: absolute;
-  top: -2rem;
-  right: 1rem;
-}
-
-.comment {
   font-size: 1rem;
+  justify-content: right;
+  align-items: center;
+}
+.comment-card__comment {
+  flex-direction: row;
+  justify-content: right;
+  align-items: center;
+  font-size: 1rem;
+  width: 80%;
+  height: 80%;
+  padding-left: 0rem;
 }/*# sourceMappingURL=bio.css.map */
